plugins {
    id "java"
    id "jacoco"
    id "com.diffplug.spotless" version "$spotlessVersion"
    id "org.springframework.boot" version "$springBootVersion"
    id "io.spring.dependency-management" version "$springDependencyManagementVersion"
    id "com.google.protobuf" version "$protobufGradlePluginVersion"
}

group = "bot.finance"
version = "${appVersion}"
description = "ai-connector-service"

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

repositories {
    mavenCentral()
}

sourceSets {
    main {
        proto {
            srcDir("$rootDir/../proto")
        }
    }
}

protobuf {
    protoc {
        artifact = "com.google.protobuf:protoc:${protobufVersion}"
    }
    plugins {
        grpc {
            artifact = "io.grpc:protoc-gen-grpc-java:${grpcVersion}"
        }
    }
    generateProtoTasks {
        all().configureEach {
            plugins {
                grpc {}
            }
        }
    }
}

dependencies {
    implementation platform("org.springframework.ai:spring-ai-bom:${springAiVersion}")

    implementation "org.springframework.boot:spring-boot-starter-grpc-server"
    implementation "org.springframework.boot:spring-boot-starter-actuator"
    implementation "io.micrometer:micrometer-registry-prometheus"
    implementation "org.springframework.boot:spring-boot-starter-webmvc"
    implementation "org.springframework.ai:spring-ai-starter-model-openai"
    implementation "org.springframework.ai:spring-ai-starter-mcp-client"

    implementation "org.springframework.boot:spring-boot-starter-data-jdbc"
    implementation "org.springframework.boot:spring-boot-starter-flyway"
    implementation "org.flywaydb:flyway-database-postgresql"
    implementation "org.postgresql:postgresql"
    implementation "org.springframework.security:spring-security-oauth2-jose"
    implementation "org.springframework.boot:spring-boot-starter-data-redis"

    testImplementation "org.springframework.boot:spring-boot-starter-grpc-server-test"
    testImplementation "org.springframework.boot:spring-boot-starter-webmvc-test"
    testImplementation "org.springframework.boot:spring-boot-starter-data-jdbc-test"
    testImplementation "org.springframework.boot:spring-boot-starter-jdbc-test"
    testImplementation "org.springframework.boot:spring-boot-starter-flyway-test"
    testImplementation "org.springframework.boot:spring-boot-testcontainers"

    testImplementation "io.rest-assured:rest-assured:${restAssuredVersion}"
    testImplementation "io.rest-assured:json-path:${restAssuredVersion}"

    testImplementation "org.wiremock:wiremock-standalone:${wiremockVersion}"
    testImplementation "org.awaitility:awaitility:${awaitilityVersion}"
    testImplementation "com.tngtech.archunit:archunit-junit5:${archunitVersion}"

    testImplementation "org.testcontainers:testcontainers-junit-jupiter"
    testImplementation "org.testcontainers:testcontainers-postgresql"
    testImplementation "org.testcontainers:testcontainers-toxiproxy"

    testRuntimeOnly "org.junit.platform:junit-platform-launcher"
}

test {
    useJUnitPlatform()
}

jacoco {
    toolVersion = "${jacocoVersion}"
}

// Generated protobuf and gRPC stubs compile into main output and are never exercised directly.
// The report and the rule share one filter, so a reported percentage is the one being enforced.
def coveredClasses = { task ->
    task.classDirectories.setFrom(files(task.classDirectories.files.collect {
        fileTree(dir: it, exclude: ["bot/finance/ai/adapter/grpc/v1/**", "**/*Application.class"])
    }))
}

tasks.named("jacocoTestReport") {
    coveredClasses(it)

    // CSV is what tools/plan-evidence reads: one row per class, no XML parsing in a shell script.
    reports {
        csv.required = true
        html.required = true
    }
}

// Deliberately not wired into `test` or `check`: a filtered run and a half-implemented plan both
// have every right to low coverage. tools/agent-test/agent-test.sh --coverage names this task.
tasks.named("jacocoTestCoverageVerification") {
    dependsOn tasks.named("test")
    coveredClasses(it)

    violationRules {
        rule {
            limit {
                counter = "INSTRUCTION"
                minimum = coverageMinimum.toBigDecimal()
            }
        }
    }
}

spotless {
    java {
        target "src/main/java/**/*.java", "src/test/java/**/*.java"
        palantirJavaFormat("${palantirJavaFormatVersion}")
        removeUnusedImports()
        importOrder()
    }
}
